[Extensions] Include mime type in served extension files

Modules enforce strict mime type requirements, but files served through
extension protocols don't specify a mime type. Include it in the
response headers. This enables modules for chrome extensions.

Add a test to exercise basic module use.

Bug: 769012
Change-Id: I1eba64e9194c00b9feb39f5fb0f5576a53d34930